--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
                 <h3>
-                    <a href="assets\David Lavanchy Technical Resume.pdf" class="btn btn-resume btn-lg text-white mt-3"
-                        download>Resume</a>
+                    <a href="assets\David Lavanchy Technical Resume (5).pdf"
+                        class="btn btn-resume btn-lg text-white mt-3" download>Resume</a>
                 </h3>
             </div>
             <div class="col-lg-3"></div>
