--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
                 <h3>
-                    <a href="assets\David Lavanchy Technical Resume (5).pdf"
+                    <a href="assets\Resume (1).pdf"
                         class="btn btn-resume btn-lg text-white mt-3" download>Resume</a>
                 </h3>
             </div>
